Big clean: deleted unused methods; optimized field names; rebuild tests;